--- a/uno.html
+++ b/uno.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web, mi twitter es xbadomarx
+        hola amigos este es mi sitio web, mi twitter es xbadomarx y sigueme en twitch xbadmatchup
     </p>
 </body>
 </html>
