--- a/uno.html
+++ b/uno.html
@@ -1,13 +1,314 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hola mundo</title>
+    <link rel="shortcut icon" href="./assests/Blue Purple Mariposa Logo (1).png">
+    <link rel="apple-touch-icon" href="./assests/Blue Purple Mariposa Logo (1).png">
+    <meta name="theme-color" content="#6A205F">
+    <meta name="description" content="En +COTAS te ayudamos con el cuidado del pelo y la higiene de tus mascotas, orientándonos al bienestar animal y darle los mejores cuidados con el cariño y amor que se merecen.">
+    <meta property="og:title" content="+COTAS">
+    <meta property="og:description" content="En +COTAS te ayudamos con el cuidado del pelo y la higiene de tus mascotas, orientándonos al bienestar animal y darle los mejores cuidados con el cariño y amor que se merecen.">
+    <meta property="og:image" content="">
+    <meta name="twitter:card" content="summary">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link rel="stylesheet" href="style.css">
+    <title>+COTAS</title>
 </head>
 <body>
-    <p>
-        hola amigos este es mi sitio web, mi twitter es xbadomarx y sigueme en twitch xbadmatchup
-    </p>
+
+<!--========== SCROLL TOP ==========-->
+<a href="https://api.whatsapp.com/send?phone=1100002222&text=Hola%20quisiera%20reservar%20un%20turno!" target="_blank" class="scrolltop" id="scroll-top">
+    <i class="fab fa-whatsapp"></i>
+</a>
+
+<!--=====================================================HEADER=====================================================-->
+
+<section id="home" class="banner">
+    <header class="l-header" id="header">
+        <nav class="nav bd-container">
+            <a href="#"> <img src="./assests/Blue Purple Mariposa Logo (1).png" class="logo" alt="logo"></a>
+                
+<div class="nav__menu" id="nav-menu">
+    <ul class="nav__list">
+        <li class="nav__item"><a href="#home" class="nav__link active-link">Inicio</a></li>
+            <li class="nav__item"><a href="#servicios" class="nav__link">Servicios</a></li>
+            <li class="nav__item"><a href="#trabajos" class="nav__link">Trabajos</a></li>
+            <li class="nav__item"><a href="#turnos" class="nav__link">Turnos</a></li>
+            <li class="nav__item"><a href="#form" class="nav__link">Contacto</a></li>
+        </ul>
+    <input type="checkbox" class="checkbox" id="chk">
+    <label class="label" for="chk">
+    <i class="fas fa-moon change-theme" id="theme-button"></i>
+    <i class="fas fa-sun"></i>
+	<span class="ball"></span>
+	</label>
+</div>
+
+        <div class="nav__toggle" id="nav-toggle">
+            <i class='fas fa-bars'></i>
+        </div>
+        </nav>
+    </header>
+</section>
+
+    <div class="content">
+        <div class="title">    
+            <div class="slider">
+                <div>Pet shop</div>
+                <div>Peluquería canina</div>
+                <div>+COTAS</div>
+                </div>
+            </div>
+            <p>En +COTAS te ayudamos con el cuidado del pelo y la higiene de tus mascotas, orientándonos al bienestar animal.</p>
+            <a class="reserva" href="#turnos">RESERVA UN TURNO</a>
+    </div> 
+
+<!--=====================================================SERVICIOS=====================================================-->
+
+<section id="servicios">
+    <div class="title-text">
+        <p>SERVICIOS</p>
+        <h2>¿Por qué elegirnos?</h2>
+    </div>
+    <div class="feature-box">
+        <div class="features">
+            <h3>Peluquería canina</h3>
+            <div class="features-desc">
+                <div class="feature-icon">
+                    <i class="fas fa-paw"></i>
+                </div>
+                <div class="feature-text">
+                    <p>Nos encargamos de darle los mejores cuidados a tus mascotas y de cubrir todas sus necesidades de higiene. Contamos con la experiencia y los elementos acorde.</p>
+                </div>
+            </div>
+
+            
+            <h3>Pet shop</h3>
+            <div class="features-desc">
+                <div class="feature-icon">
+                    <i class="fas fa-dog"></i>
+                </div>
+                <div class="feature-text">
+                    <p>En nuestro pet shop contamos con una alta variedad de las mejores marcas de alimentos balanceados, pipetas, accesorios y productos de belleza canina.</p>
+                </div>
+            </div>
+
+            <h3>Nosotros</h3>
+            <div class="features-desc">
+                <div class="feature-icon">
+                    <i class="fas fa-store-alt"></i>
+                </div>
+                <div class="feature-text">
+                    <p>Somos personas que entienden el concepto de servicio profesional y lo que significa el cariño y amor por nuestras mascotas.</p>
+                </div>
+            </div>
+        </div>
+        <div class="features-img">
+            <img src="./close-up-smiley-girl-hugging-pet.jpg" alt="servicio">
+        </div>
+    </div>
+</section>
+
+<!--=====================================================TRABAJOS=====================================================-->
+
+<section id="trabajos">
+    <div class="title-text">
+        <p>NUESTROS TRABAJOS</p>
+        <h2>Lo mejor para tu mascota</h2>
+    </div>
+    <div class="service-box">
+        <div class="single-service">
+            <img src="./close-up-man-couch-with-dog.jpg" alt="trabajo">
+            <div class="overlay"></div>
+            <div class="service-desc">
+                <h3>Baños hipoalergénicos</h3>
+                <hr>
+                <p>Trabajamos con productos hipoalergénicos, lo cual dejará un pelaje reluciente y sobre todo sano, cuidando el bienestar de su mascota.</p>
+            </div>
+        </div>
+        <div class="single-service">
+            <img src="./medium-shot-asian-woman-with-cute-dog_52683-136405.jpg" alt="trabajo">
+            <div class="overlay"></div>
+            <div class="service-desc">
+                <h3>Corte higiénico</h3>
+                <hr>
+                <p>Pensado especialmente para mascotas con piel delicada. Incluye baño con shampoo hipoalergénico, secado y peinado.</p>
+            </div>
+        </div>
+        <div class="single-service">
+            <img src="./perros.jpg" alt="trabajo">
+            <div class="overlay"></div>
+            <div class="service-desc">
+                <h3>Corte de uñas</h3>
+                <hr>
+                <p>Previene heridas e infecciones por rotura de uñas y mantiene suaves las patitas de tu mascota.</p>
+            </div>
+        </div>
+        <div class="single-service">
+            <img src="./perros2.jpg" alt="trabajo">
+            <div class="overlay"></div>
+            <div class="service-desc">
+                <h3>Cepillados</h3>
+                <hr>
+                <p>Es esencial para que los pelos sobrantes sean eliminados de manera más efectiva, y ayuda a eliminar parásitos exteriores que se encuentren en el pelaje.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--=====================================================TURNOS=====================================================-->
+
+<section id="turnos">
+    <div class="title-text">
+        <p>TURNOS</p>
+        <h2>Reserva un turno</h2>
+    </div>
+    <div class="cta">
+        <h2>Podes reservar un turno para tu mascota a través de nuestro WhatsApp </h2>
+        <a class="wpp" href="https://api.whatsapp.com/send?phone=1130002222&text=Hola%20quisiera%20reservar%20un%20turno!" target="_blank">RESERVAR <i class="fab fa-whatsapp"></i></a>
+    </div>
+</section>
+
+<!--=====================================================CONTACTO=====================================================-->
+<section id="form">
+<div class="contactUs">
+    <div class="title-text">
+        <p>CONTACTANOS</p>
+        <h2>Dejanos tu mensaje</h2>
+    </div>
+    <div class="box" id="formulario">
+
+    <!--FORM-->
+    <div class="contact form">
+        <form action="https://formspree.io/f/mgvedbjz"
+        method="POST">
+            <div class="formBox">
+                <div class="row50">
+                    <div class="inputBox">
+                        <span>Nombre</span>
+                        <input type="text" placeholder="Nombre" name="Nombre" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" title="Solo se permiten letras y espacios" required>
+                    </div>
+                    <div class="inputBox">
+                        <span>Apellido</span>
+                        <input type="text" placeholder="Apellido" name="Apellido" required>
+                    </div>
+                </div>
+
+                <div class="row50">
+                    <div class="inputBox">
+                        <span>Email</span>
+                        <input type="email" name="Email" placeholder="Email" pattern="^(\w+[/./-]?){1,}@[a-z]+[/.]\w{2,}$" required>
+                    </div>
+                    <div class="inputBox">
+                        <span>Número</span>
+                        <input type="tel" name="Celular" placeholder="Celular" required>
+                    </div>
+                </div>
+
+                <div class="row100">
+                    <div class="inputBox">
+                        <span>Mensaje</span>
+                        <textarea name="Mensaje" placeholder="Dejanos tu mensaje..."></textarea>
+                    </div>
+                </div>
+
+                <div class="row100">
+                    <div class="inputBox_boton">
+                        <input type="submit" value="ENVIAR">
+                        <input type="reset" value="RESTABLECER">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <!--INFO BOX-->
+        <div class="contact info">
+        <div class="infoBox">
+            <div class="info__box">
+                <span><i class="fas fa-map-marker-alt"></i></span>
+                <address>Maneadero #8118</address>
+            </div>
+            <div class="info__box">
+                <span><i class="fas fa-envelope"></i></span>
+                <a href="mailto:pawdrino.contact@gmail.com">pawdrino.contact@gmail.com</a>
+            </div>
+            <div class="info__box">
+                <span><i class="fas fa-mobile-alt"></i></span>
+                <a href="tel:+541100002222">+52 664 725 3499</a>
+            </div>
+
+            <div class="wrapper">
+                <a href="https://www.facebook.com/profile.php?id=61569180810527" target="_blank" class="icon facebook">
+                    <div class="tooltip">Facebook</div>
+                    <span><i class="fab fa-facebook-f"></i></span>
+                </a>
+                <a href="https://www.instagram.com/pawdrino/" target="_blank" class="icon instagram">
+                    <div class="tooltip">Instagram</div>
+                    <span><i class="fab fa-instagram"></i></span>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=1100000000&text=Hola%20quisiera%20reservar%20un%20turno!" target="_blank" class="icon whatsapp">
+                    <div class="tooltip">WhatsApp</div>
+                    <span><i class="fab fa-whatsapp"></i></span>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!--MAP-->
+        <div class="contact map">
+            <iframe src="" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </div>
+</div>
+</section>
+
+<!--=====================================================FOOTER=====================================================-->
+
+<footer>
+<section id="contacto">
+    <img src="./assests/Blue Purple Mariposa Logo (1).png" class="footer-img" alt="logo">
+    <div class="title-text">
+        <p>HORARIOS</p>
+        <h2>Visitanos</h2>
+    </div>
+    <div class="footer-row">
+        <div class="footer-left">
+            <h4>Horarios</h4>
+            <p><i class="far fa-clock"></i>Lunes a viernes - 09:00 a 19:00</p>
+            <p><i class="far fa-clock"></i>Sábados y feriados - 09:00 a 20:00</p>
+        </div>
+        <div class="footer-right">
+            <h4>Contactanos</h4>
+            <address>Maneadero #8118<i class="fa fa-map-marker-alt"></i></address>
+            <p>pawdrino.contact@gmail.com<i class="fa fa-paper-plane"></i></p>
+            <p>+52 664 725 3499<i class="fa fa-phone"></i></p>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <a href="https://www.facebook.com/Mascotas.AR" target="_blank" class="icon facebook">
+            <div class="tooltip">Facebook</div>
+            <span><i class="fab fa-facebook-f"></i></span>
+        </a>
+        <a href="https://www.instagram.com/arg.mascotas/" target="_blank" class="icon instagram">
+            <div class="tooltip">Instagram</div>
+            <span><i class="fab fa-instagram"></i></span>
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=1100000000&text=Hola%20quisiera%20reservar%20un%20turno!" target="_blank" class="icon whatsapp">
+            <div class="tooltip">WhatsApp</div>
+            <span><i class="fab fa-whatsapp"></i></span>
+        </a>
+    </div>
+    <div class="footer-text">
+        © 2024 Desarrollo: Omar Villalba.
+    </div>
+</section>
+</footer>
+<!--=====================================================JAVASCRIPT=====================================================-->
+
+<script src="assets/js/main.js"></script>
 </body>
 </html>
